# swagger_generated.json
@@ -1323,7 +1323,7 @@
         "description" : "Show stored values of a single escrow",
         "operationId" : "escrowinfo",
         "parameters" : [ {
-          "name" : "escrow",
+          "name" : "escrowguid",
           "in" : "query",
           "description" : "GUID of escrow",
           "required" : true,
@@ -4035,7 +4035,7 @@
         "inputs" : {
           "type" : "array",
           "items" : {
-            "$ref" : "#/definitions/GetAddressUTXOsEntry"
+            "$ref" : "#/definitions/EscrowCreateRawTransactionDataInput"
           }
         },
         "role" : {
@@ -4045,19 +4045,13 @@
       "example" : {
         "role" : "role",
         "inputs" : [ {
-          "outputIndex" : 0.80082819046101150206595775671303272247314453125,
-          "address" : "address",
           "txid" : "txid",
-          "script" : "script",
-          "satoshis" : 6.02745618307040320615897144307382404804229736328125,
-          "height" : 1.46581298050294517310021547018550336360931396484375
+          "vout" : 0.80082819046101150206595775671303272247314453125,
+          "satoshis" : 6.02745618307040320615897144307382404804229736328125
         }, {
-          "outputIndex" : 0.80082819046101150206595775671303272247314453125,
-          "address" : "address",
           "txid" : "txid",
-          "script" : "script",
-          "satoshis" : 6.02745618307040320615897144307382404804229736328125,
-          "height" : 1.46581298050294517310021547018550336360931396484375
+          "vout" : 0.80082819046101150206595775671303272247314453125,
+          "satoshis" : 6.02745618307040320615897144307382404804229736328125
         } ],
         "escrowguid" : "escrowguid",
         "type" : "type"
@@ -6432,7 +6426,7 @@
           "description" : "offer guid that you are linking to"
         },
         "commission" : {
-          "type" : "string",
+          "type" : "number",
           "description" : "percentage of profit desired over original offer price, > 0, ie 5 for 5%"
         },
         "description" : {
@@ -6449,7 +6443,7 @@
         "alias" : "alias",
         "guid" : "guid",
         "description" : "description",
-        "commission" : "commission"
+        "commission" : 0.80082819046101150206595775671303272247314453125
       }
     },
     "OfferRemoveWhitelistRequest" : {
@@ -7757,6 +7751,24 @@
         "offer_type" : "offer_type",
         "auction_require_witness" : true,
         "payment_options" : "payment_options"
+      }
+    },
+    "EscrowCreateRawTransactionDataInput" : {
+      "properties" : {
+        "txid" : {
+          "type" : "string"
+        },
+        "vout" : {
+          "type" : "number"
+        },
+        "satoshis" : {
+          "type" : "number"
+        }
+      },
+      "example" : {
+        "txid" : "txid",
+        "vout" : 0.80082819046101150206595775671303272247314453125,
+        "satoshis" : 6.02745618307040320615897144307382404804229736328125
       }
     }
   }
